--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,23 @@
 asgiref==3.8.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+defusedxml==0.7.1
 Django==5.0.4
 django-allauth==0.54.0
 django-rest-auth==0.9.5
 django-rest-auth-forked==0.9.5
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+idna==3.7
+oauthlib==3.2.2
+pycparser==2.22
+PyJWT==2.8.0
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==2.0.0
 six==1.16.0
 sqlparse==0.5.0
+urllib3==2.2.1
